# validate_smalltalk_image

./: CMakeLists.txt  LICENSE  README.md
src/: ClassHierarchyValidator.cpp  ClassHierarchyValidator.hpp  ClassNameResolver.cpp  ClassNameResolver.hpp  ClassTableValidator.cpp  ClassTableValidator.hpp  HeapValidator.cpp  HeapValidator.hpp  HeapWalker.cpp  HeapWalker.hpp  ImageExporter.cpp  ImageExporter.hpp  MethodValidator.cpp  MethodValidator.hpp  ObjectHasher.cpp  ObjectHasher.hpp  OopTraits.hpp  OopValidator.cpp  OopValidator.hpp  ReachabilityAnalyzer.cpp  ReachabilityAnalyzer.hpp  Report.cpp  Report.hpp  Sha256.cpp  Sha256.hpp  SpecialObjectsValidator.cpp  SpecialObjectsValidator.hpp  SpurHeader.hpp  SpurImage.cpp  SpurImage.hpp  ValidationContext.cpp  ValidationContext.hpp  main.cpp
